<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity"
    android:id="@+id/linearlayout_register">
    <ImageView
        android:id="@+id/loginBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login_image" />

    <include
        android:id="@+id/include3"
        layout="@layout/action_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B3FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="568dp"
        tools:layout_conversion_absoluteWidth="387dp"
        tools:layout_editor_absoluteX="3dp">

        <TextView
            android:id="@+id/txt_logo"
            style="@style/MainLogoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Enter valid email" />

        <com.google.android.material.textfield.TextInputLayout style="@style/AdminInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/AdminInputText"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Enter username" />

        <com.google.android.material.textfield.TextInputLayout style="@style/AdminInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                style="@style/AdminInputText"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Enter a password of at least 6 characters" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AdminInputLayout"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/AdminInputText"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/AdminButton"
            android:text="@string/register" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>